2013-03-25  Christoph Anton Mitterer <mail@christoph.anton.mitterer.name>
	* In places where the CGI variable REMOTE_USER is read, support
	  alternatively REDIRECT_REMOTE_USER, which is used by the Apache
	  HTTPD Server instead, when a redirect was used.

2013-03-07  Christoph Anton Mitterer <mail@christoph.anton.mitterer.name>
	* Handle the content of the CGI AUTH_TYPE variable case-insensitively as
	  defined by RFC 3875 Section 4.1.1.

2013-03-07  Andrew McMillan <andrew@morphoss.com>
	* Release 0.54

2012-10-10  Andrew McMillan  <andrew@morphoss.com>
	* Editor: provide error message if an undefined field is used in a form.
	* Session: clarify code for setting date format.

2012-09-12  Andrew McMillan  <andrew@morphoss.com>
	* Use accessor for EMail->To(), remove silly 'must log in' message.
	  Also declare $page_elements global, as it must be.
	* Provide an accessor for the To() list.

2012-07-04  Andrew McMillan  <andrew@morphoss.com>
	* Release 0.53

2012-06-26  Andrew McMillan  <andrew@morphoss.com>
	* Correct replacement when 'mailto:' is not passed in as first part of match.

2012-06-25  Andrew McMillan  <andrew@morphoss.com>
	* Fix name of CDO TZID property, avoid unassigned variable warning.
	* Fix typo in unlocking code.

2012-05-28  Andrew McMillan  <andrew@morphoss.com>
	* For creating MIME messages.
	* Updated and modernized.

2012-06-17  Andrew McMillan  <andrew@morphoss.com>
	* Release 0.52

2012-06-14  Andrew McMillan  <andrew@morphoss.com>
	* [DataUpdate] Fix regular expression matching whether value is already a salted hash.

2012-05-20  Andrew McMillan  <andrew@morphoss.com>
	* [XMLElement] Changes for more repeatable parsing.
	* [XMLDocument] If an href includes a space or @ then bug about it, but urlencode it also.

2012-05-15  Andrew McMillan  <andrew@morphoss.com>
	* [Editor] Add support for labels on checkboxes.

2012-05-11  Andrew McMillan  <andrew@morphoss.com>
	* [XMLElement] XML parsing / creating improvements / fixes.
